--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1></h1>
+    </header>
+    <main>
+        <p>
+            <strong></strong>
+            <em></em>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a>
+        </p>
+        <table>
+            <thead>
+              <tr>
+                <th>Element name</th>
+                <th>Display value</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>h1</td>
+                <td>block</td>
+              </tr>
+              <tr>
+                <td>p</td>
+                <td>block</td>
+              </tr>
+              <tr>
+                <td>strong</td>
+                <td>inline</td>
+              </tr>
+              <tr>
+                <td>em</td>
+                <td>inline</td>
+              </tr>
+            </tbody>
+          </table>
+    </main>
+    <footer>
+
+    </footer>
+    
+</body>
+</html>
